2007-04-05  Dave Lehman  <dlehman@redhat.com>

	* system-config-kdump.spec: bump version, add changelog.

2007-02-06  Dave Lehman  <dlehman@redhat.com>
	* src/system-config-kdump.py:
	only present ext2 and ext3 filesystem types as options (#220223)

	* src/system-config-kdump.py:
	align memory requirements with documented system limits (#228711)

	* system-config-kdump.spec: update changelog

2006-12-20  Dave Lehman  <dlehman@redhat.com>
	* src/system-config-kdump.py:
	include kernel path in bootloader info list so bootloader
	config is modified correctly on ia64 (#220231)

	* src/system-config-kdump.glade:
	make locationEditButton ("Edit Location") translatable (#216596)

2006-12-18  Dave Lehman  <dlehman@redhat.com>
	* src/system-config-kdump.py:
	use file: URIs instead of local: (#218878)

	* system-config-kdump.spec:
	bump version

2006-11-28  Dave Lehman  <dlehman@redhat.com>
	* src/system-config-kdump.py:
	rework memory constraints for increased flexibility (#215990)

2006-11-20  Dave Lehman  <dlehman@redhat.com>
	* src/system-config-kdump.py:
	improve consistency WRT freezing/thawing of widgets (#215991)
	* po/*:
	update strings for translation

2006-10-27  Dave Lehman  <dlehman@redhat.com>
	* src/system-config-kdump.py:
	remove #!/usr/bin/python
	* COPYING:
	add license
	* system-config-kdump.spec:
	package ChangeLog and COPYING

2006-10-26  Dave Lehman  <dlehman@redhat.com>
	* Makefile:
	fix modes on installed files
	* system-config-kdump.spec:
	remove unnecessary %preun
	various minor tweaks to appease rpmlint
	* src/system-config-kdump.glade:
	fix path to icon
	remove reference to stock weather icon (placeholder)

2006-10-24  Dave Lehman  <dlehman@redhat.com>
	* src/system-config-kdump.py:
	move all location types into combo box
	scan /sbin/fsck.* for available fs types
	get rid of kdump config header; preserve kdump config comments instead
	create a set/get method for the "quiet" attribute
	* pixmaps/system-config-kdump.png: