@@ -1,3 +1,8 @@
+2007-08-28  Dave Lehman  <dlehman@redhat.com>
+
+	* src/system-config-kdump.py: Add support for enabling and configuring 
+	kdump under Xen (Jarod Wilson, #243191)
+
 2007-04-05  Dave Lehman  <dlehman@redhat.com>
 
 	* system-config-kdump.spec: bump version, add changelog.
